# pdf-intelligence

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: config.py
backend/api/: auth.py  auth_routes.py  legacy_routes.py  main.py  stripe_routes.py
backend/auth/: database.py  jwt_handler.py  mailer.py  middleware.py
backend/evaluation/: accuracy.py  financial_statement.py
backend/export/: batch_excel.py  formula_excel.py  global_excel.py  verified_excel.py
backend/global_schema/: __init__.py  models.py  registry.py
backend/pipeline/: classifier.py  confidence.py  deepseek_fallback.py  docling_engine.py  exporter.py  financial_table_refiner.py  merger.py  models.py  orchestrator.py  plumber_engine.py  qwen_fallback.py  table_refiner.py  text_grid_extractor.py
backend/services/: batch_models.py  batch_service.py  verified_models.py
deploy/: deploy.sh
frontend/: dashboard.html  index.html  robots.txt  sitemap.xml
scripts/: analyze_pdf.py  analyze_pdf_deep.py  create_scanned_samples.py  demo_us_xbrl.py  download_esef_benchmark_corpus.py  download_financial_10k_corpus.py  download_financial_10k_pdf_corpus.py  download_financial_hk_corpus.py  export_financial_10k_excel.py  export_verified_benchmark_excel.py  run_batch_verify.py  run_benchmark.py  run_esef_verified_benchmark.py  run_eu_verified_financials.py  run_financial_10k_benchmark.py  run_hk_verified_benchmark.py  run_us_verified_financials.py  run_verified_accuracy_benchmark.py  test_difficult_pdfs.py  verify_docling_models.py
tests/: conftest.py
(+88 files in other folders)
