[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-intelligence"
version = "0.1.0"
description = "High-accuracy PDF parser with Docling, pdfplumber, and Qwen fallback"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "celery[redis]>=5.3",
    "pdfplumber>=0.11",
    "docling>=2.0",
    "pymupdf>=1.24",
    "pandas>=2.2",
    "openpyxl>=3.1",
    "dashscope>=1.20",
    "pydantic-settings>=2.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "numpy>=1.26",
    "sendgrid>=6.12",
    "google-auth>=2.0",
    "google-auth-oauthlib>=1.0",
    "requests-oauthlib>=2.0",
    "bcrypt>=5.0",
    "PyJWT>=2.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
